# computer-design

./: .gitignore  .pylintrc  README.md  dump.rdb  pyproject.toml
alembic/: env.py
alembic/versions/: 4e5fb07b595c_add_meeting.py  58724f50974c_add_address_book_model.py  5de802313f6a_first_commit.py  902cb4462f75_first_commit.py  e650badbf960_first.py
app/: main.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: address_book.py  login.py  meeting.py  user.py  users.py
app/api/api_v1/endpoints/authentication/: __init__.py  email.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_address_book.py  crud_user.py
app/db/: base_class.py  session.py
app/models/: __init__.py  address_book.py  meeting.py  user.py
app/schemas/: __init__.py  address_book.py  meeting.py  token.py  user.py
app/tests/: conftest.py  test_redis.py
app/tests/crud/: test_address_book.py  test_user.py
app/tests/utils/: __init__.py  address_book.py  user.py  utils.py
scripts/: test.sh  test_html.sh
